--- a/style.css
+++ b/style.css
@@ -38,9 +38,47 @@ form button {
 form button {
   color: #d748f9;
   cursor: pointer;
+  transition: all 0.3s ease;
 }
 form button:hover {
   color: #fff;
   background-color: #d748f9;
   cursor: pointer;
+}
+
+.todo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-list {
+  min-width: 30%;
+  list-style: none;
+}
+
+.todo {
+  display: flex;
+  background-color: #fff;
+  font-size: 1rem;
+  align-items: center;
+}
+
+.todo-item {
+  flex: 1;
+  padding: 0 0.5rem;
+}
+
+.complete-btn,
+.trash-btn {
+  background-color: #771414;
+  color: #fff;
+  cursor: pointer;
+  padding: 0.5rem;
+  font-size: 0.7rem;
+  border: none;
+}
+
+.complete-btn {
+  background-color: #3ec0b4;
 }
