--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ form button:hover {
   background-color: #fff;
   font-size: 1rem;
   align-items: center;
+  margin: 0.5rem;
+  transition: all 0.5s ease;
 }
 
 .todo-item {
@@ -81,4 +83,18 @@ form button:hover {
 
 .complete-btn {
   background-color: #3ec0b4;
+}
+
+.completed {
+  text-decoration: line-through;
+  opacity: 0.5;
+}
+
+.fall {
+  transform: translateY(8rem) rotateZ(20deg);
+  opacity: 0;
+}
+
+.fa-trash .fa-check {
+  pointer-events: none;
 }
